--- a/package.json
+++ b/package.json
@@ -5,10 +5,12 @@
     "ng": "ng",
     "start": "ng serve",
     "start:dev": "ng serve -o",
-    "build": "ng build",
+    "build": "npm run prerender:routes && ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "serve": "node dist/pokemon-ssr/server/server.mjs"
+    "serve:ssr:pokemon-ssr":"node dist/pokemon-ssr/server/server.mjs" ,
+    "serve": "node dist/pokemon-ssr/server/server.mjs",
+    "prerender:routes": "node scripts/prerender-routes.js"
   },
   "private": true,
   "dependencies": {
