--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,6 @@
         "angular-*": {
             "externalTemplate": true
         }
-    }
+    },
+    "js-auto-backticks.enableRevert": true
 }
