--- a/package.json
+++ b/package.json
@@ -5,12 +5,13 @@
     "ng": "ng",
     "start": "ng serve",
     "start:dev": "ng serve -o",
-    "build": "npm run prerender:routes && ng build",
+    "build": "npm run testing:integration && npm run prerender:routes && ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "serve:ssr:pokemon-ssr":"node dist/pokemon-ssr/server/server.mjs" ,
     "serve": "node dist/pokemon-ssr/server/server.mjs",
-    "prerender:routes": "node scripts/prerender-routes.js"
+    "prerender:routes": "node scripts/prerender-routes.js",
+    "testing:integration": "ng test --no-watch --no-progress --browsers=ChromeHeadless"
   },
   "private": true,
   "dependencies": {
