--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "ng": "ng",
     "start": "ng serve",
     "start:dev": "ng serve -o",
-    "build": "npm run testing:integration && npm run prerender:routes && ng build",
+    "build": "npm run prerender:routes && ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
     "serve:ssr:pokemon-ssr":"node dist/pokemon-ssr/server/server.mjs" ,
